# edictum

./: .docs-style-guide.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  REVIEW.md  SECURITY.md  SECURITY_RETRO_v0.11.1.md  WORKPLAN.md  mkdocs.yml  package.json  pyproject.toml  test-gate-docker.sh
.claude/agents/: code-reviewer.md
.claude/skills/: cross-repo-feature.md
.github/: review-instructions.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docs-audit.yml  notify-docs.yml  notify-parity.yml  parity-check.yml  pr-title.yml  publish.yml  review.yml
docs/: adapters.md  architecture.md  cli.md  compliance.md  evaluation.md  findings.md  index.md  lifecycle-callbacks.md  quickstart.md  roadmap.md  use-cases.md  v030-plan.md  why.md
docs/adapters/: agno.md  claude-sdk.md  crewai.md  google-adk.md  langchain.md  openai-agents.md  overview.md  semantic-kernel.md
docs/audit/: sinks.md  telemetry.md
docs/concepts/: contracts.md  how-it-works.md  observe-mode.md  principals.md  sandbox-contracts.md
docs/contracts/: operators.md  templates.md  yaml-reference.md
docs/guides/: adapter-comparison.md  adversarial.md  custom-operators.md  mutable-principal.md  observability.md  postcondition-design.md  python-hooks.md  success-check.md  testing-contracts.md  writing-contracts.md
docs/planning/: audit-findings.md  env-conditions-rfc.md
examples/: README.md  contract_cookbook.py  contracts.py  demo_agno.py  demo_claude_agent_sdk.py  demo_crewai.py  demo_langchain.py  demo_openai_agents.py  demo_semantic_kernel.py  otel_config.py  setup.sh  tools.py
fixtures/workflow/: core.workflow.yaml
schemas/: edictum-v1.schema.json
scripts/: check-terminology.py
src/callguard/: __init__.py  audit.py  builtins.py  contracts.py  envelope.py  hooks.py  limits.py  session.py  telemetry.py
src/edictum/: __init__.py  _dry_run.py  _exceptions.py  _factory.py  (+16 more)
tests/: conftest.py  test_adapter_agno.py  test_adapter_claude.py  test_adapter_crewai.py  test_adapter_google_adk.py  test_adapter_langchain.py  test_adapter_nanobot.py  test_adapter_openai_agents.py  test_adapter_parity.py  test_adapter_postcondition_callback.py  test_adapter_semantic_kernel.py  test_approval.py  test_audit.py  test_builtins.py  test_contract_cookbook.py  test_contracts.py  test_docs_sync.py  test_envelope.py  test_evaluate.py  test_findings.py  test_from_yaml_multi.py  test_hooks.py  test_limits.py  test_merge.py  test_observe_alongside.py  test_otel.py  test_pipeline.py  test_pipeline_approve.py  test_postcondition_effects.py  test_review_fixes.py  test_session.py  test_storage.py  test_telemetry.py  test_tools_registry.py
(+185 files in other folders)
